getting the animations on the auto carousel done... still glitchy

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,27 @@
-.welcome {
-  height: 200px;
-  width: 400px;
-  color: red;
-  margin: 2em auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: blue;  
-  font-size: 24px;
-  box-shadow: 0 0 7px rgb(0, 0, 0);
-  border: solid 1px slategray;
-  text-shadow: 0 0 1px black;
+@media only screen 
+  and (min-width: 100px) 
+  and (max-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+ 
+    .badge {
+      display: none;
+  }
+
 }
 
+@media only screen
+  and (max-width: 1025px) {
+
+    .badge {
+      display: none;
+    }
+  }
+
+
+
+.badge {
+  position: fixed;
+  top: 72%;
+  right: 4em;
+  z-index: 3;
+}
