--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -19,8 +19,8 @@
     animation-name: opacitor;
     animation-duration: 7s;
     animation-iteration-count: infinite;
-    animation-timing-function: cubic-bezier(0.47, 0, 0.745, 0.715);
-    z-index: 2
+    animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    z-index: -2;
 }
 
 .img-carousel2 {
@@ -29,11 +29,11 @@
     min-width: 100%;
     max-width: auto;
     position: absolute;
-    animation-name: opacitor;
+    animation-name: revOpacitor;
     animation-duration: 7s;
     animation-iteration-count: infinite;
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    z-index: 1;
+    animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    z-index: -1;
 }
 
 
@@ -48,8 +48,30 @@
      color: rgb(255, 255, 255);
      text-align: center;
      text-shadow: 0px .5px .5px rgba(194, 167, 190, 0.3);
+     animation-name: opacitor;
+     animation-duration: 7s;
+     animation-iteration-count: infinite;
+     animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
      z-index: 3;
  }
+
+.txt-carousel2 {
+     font-family: 'Montserrat', sans-serif;
+     font-weight: 400;
+     position: absolute;
+     top: 35%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     font-size: 2em;
+     color: rgb(255, 255, 255);
+     text-align: center;
+     text-shadow: 0px .5px .5px rgba(194, 167, 190, 0.3);
+     animation-name: revOpacitor;
+     animation-duration: 7s;
+     animation-iteration-count: infinite;
+     animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+     z-index: 2;
+ } 
   
  @media only screen 
   and (min-width: 100px) 
@@ -65,15 +87,11 @@
   }
 
   @keyframes opacitor {
-    0% { opacity: 0}
-    30% { opacity: 1}
-    60% {opacity: 1}
+    0% { opacity: 1}
     100% {opacity: 0}
   }
 
   @keyframes revOpacitor {
-      0% {opacity: 1}
-      30% {opacity: 0}
-      60% {opacity: 0}
+      0% {opacity: 0}
       100% {opacity: 1}
   }
