--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -1,15 +1,19 @@
+$font-var: "Montserrat", sans-serif;
+
 .image-carousel {
     height: 80vh;
-    width: 100%;
-    box-sizing: border-box;
+    max-width: 100%;
+    box-sizing: border-box;    
 
         .img-frame {
+            width: 100%;
+            height: 80vh;
             max-height: auto;
             max-width: auto;
         }
 
         .txt-carousel {
-            font-family: "Montserrat", sans-serif;
+            font: 100% $font-var;
             font-weight: 400;
             position: absolute;
             top: 35%;
@@ -19,14 +23,60 @@
             color: rgb(255, 255, 255);
             text-align: center;
             text-shadow: 0px 0.5px 0.5px rgba(194, 167, 190, 0.3);
-            animation-name: opacitor;
-            animation-duration: 26.8;
-            animation-iteration-count: infinite;
-            animation-timing-function: ease-in-out;
         }
 
+
+        .btn-discover {
+            font: 100% $font-var;
+            width: 141px;
+            height: 41px;
+            background: black;
+            color: white;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            font-size: 14px;
+            letter-spacing: 2px;
+            border-radius: .1em;
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            transform: translate(-50%, -50%);        
+        }
+
+        .btn-discover:hover {
+            cursor: pointer;
+            background: transparent;
+            border: 2px solid white;
+            transition: .4s ease-in-out;
+        }
+
+        #animate-me {
+        max-width: 100%;
+        max-height: 100%;
+        animation-name: opacitor;
+        animation-duration: 26.8s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+
+#animate-me:nth-of-type(1) {
+    animation-delay: 20.1s;
 }
- 
+
+#animate-me:nth-of-type(2) {
+    animation-delay: 13.4s;
+    
+}
+#animate-me:nth-of-type(3) {
+    animation-delay: 6.7s;
+    
+}
+#animate-me:nth-of-type(4) {
+    animation-delay: 0;
+}
+
+} 
 
 .image-slide {
   width: auto;
@@ -40,6 +90,8 @@
 }
 
 #animate-me {
+  max-width: 100%;
+  max-height: 100%;
   animation-name: opacitor;
   animation-duration: 26.8s;
   animation-iteration-count: infinite;
@@ -63,7 +115,9 @@
 }
 
 
-@media only screen and (min-width: 100px) and (max-width: 568px) {
+@media only screen 
+and (min-width: 100px) 
+and (max-width: 568px) {
   .img-carousel {
     max-height: 40%;
     max-width: auto;
@@ -88,7 +142,7 @@
     opacity: 0;
   }
   100% {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
