--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,17 +1,162 @@
-.nav-sticky {
-    height: 0em;
+ul li {
+    list-style: none;
+}
+
+.nav-parent {
+    box-sizing: border-box;
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+
+    .nav-sticky {
+    height: 40px;
     width: 100%;
     background: transparent;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
     position: fixed;
+    display: flex;
 }
 
-.social-tag {
+.nav-left {
+    display: flex;
+
+.nav-menu {
+    letter-spacing: 2px;
+    box-sizing: border-box;
+    display: flex;
+    font-size: 14px;
+    width: 250px;
+    justify-content: space-between;
+    
+      .drop-menu-store {
+        display: none;
+        position: fixed;
+        top: 2.5em;
+        left: 0;
+    }
+  
+      .drop-menu-info {
+        display: none;
+        position: fixed;
+        top: 2.5em;
+        left: 6.5em;
+    }
+  }
+
+    .nav-menu-store:hover {
+    cursor: pointer;
+    color: red;
+
+     .drop-menu-store {
+        display: flex;
+        flex-direction: column;
+
+        li {
+            margin-top: 5px;
+            color: black;
+        }
+
+        li:hover {
+            cursor: pointer;
+            
+        }
+
+    }
+  }
+
+   .nav-menu-info:hover {
+        cursor: pointer;
+        color: red;
+        .drop-menu-info {
+            display: flex;
+            flex-direction: column;
+        }
+
+        li {
+            margin-top: 5px;
+            color: black;
+        }
+    }
+}
+
+
+.right-nav-social {
+    display: flex;
+    img {
     box-sizing: border-box;
     color: black;
-    height: 80%;
-    width: 2em;
-    margin: 0 5px;
+    transform: scale(1);
+    margin: 0 3px;
+    }
+
+    .social-tag-p {
+        position: fixed;
+        top: 12px;
+        right: 5.3em;
+    }
+
+    .social-tag-p:hover {
+        cursor: pointer;
+    }
+
+    .social-tag-f {
+        position: fixed;
+        top: 14px;
+        right: 4.1em;
+    }
+
+    .social-tag-f:hover {
+        cursor: pointer;
+    }
+
+    .social-tag-i {
+        position: fixed;
+        top: 12px;
+        right: 2em;
+    }
+
+    .social-tag-i:hover {
+        cursor: pointer;
+    }
+
+ }
 }
+
+.drop-menu-mobile {
+    height: 30px;
+    width: 60px;
+    position: absolute;
+    left: 1em;
+    top: 30%;
+}
+
+.nav-mobile {
+    text-underline-position: auto;
+    text-decoration: underline;
+}
+
+.nav-mobile:hover {
+    cursor: pointer;
+}
+
+.mobile-nav-menu {
+    display: none;
+}
+
+
+@media only screen
+  and (max-width: 1025px) {
+      .nav-parent {
+     width: 100%;
+     height: 40px;
+     margin: none;
+     position: fixed;
+     top: 0;
+     background: #FFFFFF;
+     z-index: 1;
+     display: flex;
+    }
+  }
