--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -3,13 +3,15 @@ $font-var: "Montserrat", sans-serif;
 .image-carousel {
     height: 80vh;
     width: 100%;
-    box-sizing: border-box;    
+    box-sizing: border-box;
 
         .img-frame {
+            box-sizing: border-box;
            object-fit: cover;
         }
 
         .txt-carousel {
+            box-sizing: border-box;
             font: 100% $font-var;
             font-weight: 400;
             position: absolute;
@@ -38,7 +40,7 @@ $font-var: "Montserrat", sans-serif;
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);        
+            transform: translate(-50%, -50%); 
         }
 
         .btn-discover:hover {
@@ -54,6 +56,7 @@ $font-var: "Montserrat", sans-serif;
         animation-duration: 26.8s;
         animation-iteration-count: infinite;
         animation-timing-function: ease-in-out;
+
     }
 
 #animate-me:nth-of-type(1) {
@@ -85,47 +88,15 @@ $font-var: "Montserrat", sans-serif;
     width: 100%;
 }
 
-#animate-me {
-  max-width: 100%;
-  max-height: 100%;
-  animation-name: opacitor;
-  animation-duration: 26.8s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
-#animate-me:nth-of-type(1) {
-    animation-delay: 20.1s;
-}
-
-#animate-me:nth-of-type(2) {
-    animation-delay: 13.4s;
-    
-}
-#animate-me:nth-of-type(3) {
-    animation-delay: 6.7s;
-    
-}
-#animate-me:nth-of-type(4) {
-    animation-delay: 0;
-}
-
 .carousel-bottom {
     box-sizing: border-box;
-    display: flex;
-    justify-content: space-around;
     width: 100%;
     height: 120px;
     background: white;
     position: absolute;
-    bottom: 0px;
+    top: 83vh;
 }
 
-.logo-container {
-    position: sticky;
-    bottom: 50px;
-    transform: scale(1.8);
-}
 
 @media only screen 
 and (max-width: 568px) {
