--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -1,7 +1,7 @@
 .logo-container {
     position: absolute;
-    top: 83vh;
-    left: 50vw;
+    top: 91vh;
+    left: 45%;
     z-index: 4;
     transform: scale(1.8);
 }
@@ -12,6 +12,6 @@
     top: 10px;
     left: 45%;
     transform: scale(1);
-    transition: transform .4s ease-in;
+    transition: transform .2s ease-in;
     z-index: 4;
 }
