--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -1,9 +1,14 @@
+.landing-page-container {
+    position: relative;
+}
+
 .logo-container {
     position: absolute;
     top: 91vh;
     left: 45%;
     z-index: 4;
-    transform: scale(1.8);
+    transform: scale(1.7);
+    transition: transform .2s ease-out;
 }
 
 
@@ -11,7 +16,26 @@
     position: fixed;
     top: 10px;
     left: 45%;
-    transform: scale(1);
+    transform: scale(1.1);
     transition: transform .2s ease-in;
     z-index: 4;
+}
+
+@media only screen 
+and (max-width: 768px) {
+
+    .logo-container {
+        visibility: hidden;
+    }
+
+    .sticky-logo {
+        visibility: hidden;
+ }
+}
+
+@media only screen
+and (max-width: 1025px) {
+    .sticky-logo {
+        visibility: hidden;
+    }
 }
