--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -13,7 +13,7 @@ a {
 .nav-parent {
     box-sizing: border-box;
     position: relative;
-    z-index: 2;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
 
@@ -51,6 +51,10 @@ a {
     }
 }
 
+.store-wrapper:hover {
+    color: red;
+}
+
 .info-wrapper {
     display: flex;
     margin-right: 2.5em;
@@ -59,6 +63,11 @@ a {
         height: 1.2em;
         width: 1.5em;
     }
+}
+
+.info-wrapper:hover {
+    color: red;
+ }
 }
 
 .nav-menu {
@@ -73,45 +82,53 @@ a {
       .drop-menu-store {
         display: none;
         position: fixed;
-        top: 2.5em;
+        top: 3em;
         left: 0;
-    }
-  
-      .drop-menu-info {
-        display: none;
-        position: fixed;
-        top: 2.5em;
-        left: 6.5em;
-    }
-  }
-
-    .store-wrapper:hover {
-    cursor: pointer;
-    color: red;
-
-     .drop-menu-store {
-        display: flex;
-        flex-direction: column;
 
         li {
-            margin-top: 5px;
-            color: black;
+            margin-bottom: 15px;
         }
 
         li:hover {
-            cursor: pointer;
-            
-        }
+        text-decoration: underline;
+        transition: .5s ease-in-out;
+     }
 
     }
+  
+      .drop-menu-info {
+        display: none;         
+        position: fixed;
+        top: 3em;
+        left: 8.6em;
+        transition: .3s ease-in-out;
+
+        li {
+            margin-bottom: 15px;
+        }
+
+        li:hover {
+          text-decoration: underline;
+          transition: .5s ease-in-out;
+     }
+
+    }
+
+    
+
+    .reveal {
+        display: flex;
+        flex-direction: column;
+   }
+ 
   }
 
    .info-wrapper:hover {
         cursor: pointer;
         color: red;
-        .drop-menu-info {
-            display: flex;
-            flex-direction: column;
+    .drop-menu-info {
+        display: flex;
+        flex-direction: column;
         }
 
         li {
@@ -168,8 +185,24 @@ a {
         letter-spacing: 3px;
     }
 
+    .nav-cart-tab {
+        position: fixed;
+        top: 12px;
+        right: 4.5em;
+        font-size: 13px;
+        letter-spacing: 3px;
+    }
+
+    .nav-cart-mob {
+        position: fixed;
+        top: 12px;
+        right: 4.5em;
+        font-size: 13px;
+        letter-spacing: 3px;
+    }
+
  }
-}
+
 
 // >---------------------------------- Mobile Nav-Styles --------------------------------------<
 
@@ -189,7 +222,7 @@ a {
 .nav-mobile:hover {
     cursor: pointer;
     text-decoration: underline;
-  
+    transition: .7s ease-in;
 }
 
 .mobile-nav-menu {
@@ -201,32 +234,19 @@ a {
     display: flex;
     flex-direction: column;
     transform: translate(0 , -453px);
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.4s ease-in-out;
     z-index: -2;
 }
 
-.reveal {
+.mob-reveal {
     position: absolute;
     left: -20px;
     transform: translate(0, 460px);
-    transition: transform 0.3s ease-out;
+    transition: transform 0.4s ease-out;
+    z-index: -2;
 }
 
 // >----------------------------------------- Mobile Transition -------------------------------<
-
-@media only screen
-and (max-width: 768px) {
-    .social-tag-p {
-        display: none;
-    }
-
-    .social-tag-i {
-        position: fixed;
-        top: 11px;
-        right: .8em;
-    }
-}
-
 
 @media only screen
   and (max-width: 1025px) {
@@ -237,7 +257,22 @@ and (max-width: 768px) {
      position: fixed;
      top: 0;
      background: #FFFFFF;
-     z-index: 1;
+     z-index: 3;
      display: flex;
     }
   }
+
+  @media only screen
+and (max-width: 768px) {
+
+        .social-tag-p {
+            display: none;
+        }
+
+        .social-tag-i {
+            position: fixed;
+            top: 11px;
+            right: .8em;
+        }
+
+}
