--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -5,7 +5,8 @@
 .logo-container {
     position: absolute;
     top: 91vh;
-    left: 45%;
+    left: 45vw;
+    transform: translate(-50vw, -50vw);
     z-index: 4;
     transform: scale(1.7);
     transition: transform .2s ease-out;
@@ -15,27 +16,60 @@
 .sticky-logo {
     position: fixed;
     top: 10px;
-    left: 45%;
-    transform: scale(1.1);
+    left: 45vw;
+    transform: scale(1);
     transition: transform .2s ease-in;
     z-index: 4;
 }
 
-@media only screen 
-and (max-width: 768px) {
 
+@media only screen
+and (max-width: 568px) {
+      
     .logo-container {
-        visibility: hidden;
+        display: none;
     }
 
     .sticky-logo {
-        visibility: hidden;
- }
+        position: fixed;
+        top: 10px;
+        left: 28vw;
+        z-index: 4;
+        transition: .4s ease-in;        
+    }
+}
+
+
+@media only screen 
+and (max-width: 768px)
+and (min-width: 568px) {
+
+    .logo-container {
+       display: none;
+}
+
+
+}
+
+
+@media only screen
+and (max-width: 1100px)
+and(min-width: 768px) {
+   
+    .logo-container {
+        position: absolute;
+        left: 43vw;
+    }
 }
 
 @media only screen
-and (max-width: 1025px) {
+and (min-width: 1290px) {
+
+    .logo-container {
+        left: 46.5vw;
+    }
+
     .sticky-logo {
-        visibility: hidden;
+        left: 46.5vw;
     }
 }
