--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -83,6 +83,20 @@ $font-var: "Montserrat", sans-serif;
     cursor: pointer;
 }
 
+.delete-container {
+    border: 1px solid black;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    img {
+        height: 13px;
+        width: 13px;
+    }
+}
 
 .cart-item {
     display: flex;
