--- a/src/styles/productDetails.scss
+++ b/src/styles/productDetails.scss
@@ -5,7 +5,8 @@ $font-var: "Montserrat", sans-serif;
     display: flex;
     height: 100vh;
     width: 100vw;
-    margin-top: 30px;
+    position: absolute;
+    top: 30px;
     box-sizing: border-box;
 }
 
