--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,4 +1,6 @@
 .product-parent {
+    position: absolute;
+    top: 100vh;
     height: 200vh;
     width: 100%;
     background: #efefef;
@@ -6,19 +8,52 @@
 
 .wrap-products {
     margin: 10px auto;
+    height: 300px;
+    width: 300px;
 }
 
 .product-card {
-    height: 450px;
-    width: 750px;
+    height: 300px;
+    width: 300px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin: 10px auto;
+    transition: all .5s ease-in-out; 
+    box-shadow: 0px, 0px, 20px rgba(0, 0, 0, 1);      
 }
 
 
 .image-container {
-    height: 10vh;
-    width: 10vw;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);    
+    
+    img {
+      height: 100%;
+      width: 100%;
+    }
 }
 
+.euro {
+    height: 12px;
+    width: 12px;
+    image: white;
+}
+
+.product-hover {
+    position: absolute;
+    height: 300px;
+    width: 300px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: rgba(0, 0, 0, 0.3);
+    transition: all .5s ease-in-out;
+    color: white;
+}
+
+.product-card:hover .product-hover {
+    display: flex;
+    position: absolute;
+    transition: all .5s ease-in-out;    
+}
