--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,24 +1,40 @@
 .product-parent {
     position: absolute;
     top: 100vh;
-    height: 200vh;
     width: 100%;
+    height: 400vh;
     background: #efefef;
+    // display: grid;
+    
 }
 
-.wrap-products {
-    margin: 10px auto;
-    height: 300px;
-    width: 300px;
+.product-wrapper {
+    margin-left: 12%;
+    width: 100%;
+    
+}
+
+.products {
+    margin: 10% 0;
+    height: 100%;
+    width: 75%;
+    // width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    grid-auto-rows: 300px;
+    column-gap: 10px;
+    grid-row-gap: 20px;
+    // display: flex;
+    // flex-wrap: wrap;
 }
 
 .product-card {
-    height: 300px;
+    height: auto;
     width: 300px;
-    display: flex;
+    // display: flex;
     align-items: center;
     justify-content: space-around;
-    margin: 10px auto;
+    // margin: 10px auto;
     transition: all .5s ease-in-out; 
     box-shadow: 0px, 0px, 20px rgba(0, 0, 0, 1);      
 }
@@ -28,9 +44,9 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);    
     
     img {
-      height: 100%;
+      height: auto;
       width: 100%;
-      fill: white;
+      
       
     }
 }
@@ -55,6 +71,10 @@
 .price-line {
     display: flex;
     align-items: center;
+}
+
+.loading{
+    margin: 20% auto;
 }
 
 .product-hover {
