--- a/src/styles/checkout.scss
+++ b/src/styles/checkout.scss
@@ -1,5 +1,3 @@
-$font-var: "Montserrat", sans-serif;
-
 .StripeElement {
   background-color: rgb(238, 238, 238);
   box-sizing: border-box;
@@ -24,7 +22,7 @@ $font-var: "Montserrat", sans-serif;
 
 .stripe-submit {
     box-sizing: border-box;
-    font: 100% $font-var;
+    font: "Montserrat", sans-serif;
     width: 131px;
     height: 41px;
     background: transparent;
