--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -8,6 +8,73 @@ $font-var: "Montserrat", sans-serif;
     position: relative;
 }
 
+.modal-background {
+    opacity: 0;
+    display: none;
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    transition: opacity 0.3s ease-in-out;
+}
+
+.modal-container {
+    display: none;
+    height: 18%;
+    width: 45%;
+    position: absolute;
+    top: 60%;
+    left: 28%;
+    z-index: 6;
+    background: white;
+    box-sizing: border-box;
+    border-radius: .2em;
+    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.8);
+    transition: all .7s ease-in-out;
+}
+
+.modal-content {
+    display: flex;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    transition: all .7s ease-in-out;    
+    margin: 0 auto;
+
+    img {
+        margin-top: 6em;
+        animation-name: throbbing-logo;
+        animation-duration: 5s;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+    }
+}
+
+.modal-text {
+    margin-top: 1em;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.modal-background.reveal {
+    display: inline;
+    opacity: 1;  
+}
+
+.modal-content.reveal {
+    display: flex;
+    transition: all .7s ease-in-out;    
+}
+
+.modal-container.reveal {
+    display: flex;
+    transition: all .7s ease-in-out;  
+}
+
 .cart-banner {
     font-size: 15px;
     line-height: 2em;
@@ -422,5 +489,19 @@ and ( max-width: 568px ) {
    }
 
 }
+
+}
+
+@keyframes throbbing-logo {
+
+     0% { transform: scale(1.5); }
+    30% { transform: scale(1.54); }
+    40% { transform: scale(1.58); }
+    50% { transform: scale(1.54); }
+    60% { transform: scale(1.5); }
+    70% { transform: scale(1.54); }
+    80% { transform: scale(1.58); }
+    90% { transform: scale(1.54); }
+    100% { transform: scale(1.5); }
 
 }
