--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -2,20 +2,29 @@
     position: absolute;
     top: 100vh;
     width: 100%;
-    height: 400vh;
+    height: 250%;
     background: #efefef;
+    box-sizing: border-box;
     // display: grid;
-    
+}
+
+.store-view {
+    height: 200%;
+    width: 100%;
+    margin-bottom: 20%;
+    position: relative;
 }
 
 .product-wrapper {
-    margin-left: 12%;
+    margin-left: 13%;
     width: 100%;
+    box-sizing: border-box;
     
 }
 
 .products {
-    margin: 10% 0;
+    box-sizing: border-box;
+    margin-top: 20%;
     height: 100%;
     width: 75%;
     // width: 100%;
@@ -24,6 +33,7 @@
     grid-auto-rows: 300px;
     column-gap: 10px;
     grid-row-gap: 20px;
+    position: relative;
     // display: flex;
     // flex-wrap: wrap;
 }
